fixing the spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,7 +103,7 @@ ul {
 
 li {
   background-color: var(--box-maybe);  
-  padding: 15px;
+  padding: 10px;
   margin: 10px;
   width: 95%;
 }
